# c-std

./: CMakeLists.txt
src/: CMakeLists.txt  defines.h  std.h
src/containers/: darray.c  darray.h
src/core/: logger.c  logger.h  memory.c  memory.h
src/std/: defines.h
src/std/containers/: darray.c  darray.h  list.c  list.h
src/std/core/: file.c  file.h  memory.c
tests/: CMakeLists.txt  check_check.h  tests.c
tests/containers/: check_darray.c  check_list.c  check_memory.c
